[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/eggs/reggie.png" type="Texture" id=1]
[ext_resource path="res://Scripts/eggs/Reggie.gd" type="Script" id=2]
[ext_resource path="res://Sounds/eggs/reggie.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 21.2179
height = 74.0

[node name="Reggie" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -3 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.5636, 10.3544 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.463

[node name="hurtTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="timeout" from="hurtTimer" to="." method="_on_hurtTimer_timeout"]
